# quantumproject

./: .flake8  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  curvature_energy_analysis.py  generate_figures.py  main.py  mypy.ini  pyproject.toml  requirements.txt  run_experiment.py
.github/workflows/: ci.yml
analysis/: __init__.py  geodesic.py  invertibility.py  scaling.py
notebooks/: demo.ipynb  phase4_experiments.ipynb
quantumproject/: __init__.py
quantumproject/models/: __init__.py  gnn.py  quantum_gnn.py
quantumproject/quantum/: hamiltonians.py  perturb.py  simulations.py
quantumproject/training/: pipeline.py
quantumproject/utils/: __init__.py  bulk_graph.py  graph_topologies.py  tree.py
quantumproject/visualization/: __init__.py  attention_map.py  plots.py  saliency.py
tests/: test_curvature_energy.py  test_entropy.py  test_geodesic.py  test_gnn.py  test_tree.py
