[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumproject"
version = "0.1.0"
dependencies = [
    "numpy",
    "networkx",
    "scipy",
    "torch",
    "pennylane",
    "dgl",
]

[tool.setuptools.packages.find]
include = ["quantumproject*", "analysis*"]
exclude = ["notebooks*"]

[tool.setuptools]
py-modules = ["curvature_energy_analysis"]

[project.optional-dependencies]
jax = ["jax", "jaxlib"]
gpu = ["cupy"]
dev = ["pytest", "flake8", "mypy"]

